3Ano/LFA/Bloco3_Construção_interpretadores_compiladores/CSV.g4
grammar CSV;

file    : row+ EOF ;
row     : field (',' field)* NEWLINE ;
field   : TEXT | STRING | ;

TEXT    : ~[,"\r\n]+ ;
STRING  : '"' ('""' | ~'"')* '"' ;
NEWLINE : '\r'? '\n' ;
WS      : [ \t]+ -> skip ;
